# ecsaber

./: .gitmodules  CMakeLists.txt  README.md  check_diff.sh  check_status.sh  copy_and_update_recursively.sh  oops_hash
oops-patch/: .gitignore  CMakeLists.txt  README.md  oops-patch-config.cmake.in  oops-patch-import.cmake.in
oops-patch/src/oops/: .gitignore  CMakeLists.txt
oops-patch/src/oops/base/: DataSetBase.h  FieldSet3D.cc  FieldSet3D.cc.patch  FieldSet3D.h  FieldSet4D.cc  FieldSet4D.cc.patch  FieldSet4D.h  FieldSet4D.h.2  FieldSet4D.h.bak  FieldSet4D.h.patch  FieldSet4D.h.tmp1  FieldSet4D.h_tmp.rej  FieldSets.h  FieldSets.h.patch  ModelSpaceCovarianceParametersBase.h  ModelSpaceCovarianceParametersBase.h.patch  ParameterTraitsVariables.cc  ParameterTraitsVariables.h  Variables.cc  Variables.cc.patch  Variables.h  Variables.h.patch
oops-patch/src/oops/interface/: ModelData.h  ModelData.h.patch
oops-patch/src/oops/mpi/: mpi.cc  mpi.cc.patch  mpi.h.patch
oops-patch/src/oops/runs/: ConvertState.h  ConvertState.h.patch
oops-patch/src/oops/util/: .gitignore  FieldSetHelpers.cc  FieldSetHelpers.h  IntSetParser.cc.patch
oops-patch/src/util/: CMakeLists.txt
oops_patch/: CMakeLists.txt  README.md  oops_patch-config.cmake.in  oops_patch-import.cmake.in
oops_patch/src/oops/: .gitignore  CMakeLists.txt
oops_patch/src/oops/base/: DataSetBase.h  FieldSet3D.cc  FieldSet3D.h  FieldSet4D.cc  FieldSet4D.h
oops_patch/src/oops/mpi/: mpi.cc  mpi.h
oops_patch/src/oops/util/: gatherPrint.h
oops_patch/src/util/: .gitignore  CMakeLists.txt
saber/: CMakeLists.txt  saber-import.cmake.in  saber-import.cmake.in.patch
saber/quench/: CMakeLists.txt
saber/quench/mains/: CMakeLists.txt  quenchConvertState.cc  quenchErrorCovarianceToolbox.cc  quenchProcessPerts.cc
saber/quench/src/: CMakeLists.txt  Covariance.h  ErrorCovariance.h  Fields.cc  Fields.h  Geometry.cc  Geometry.h  Gom.h  HorizScaleDecomposition.h  HybridWeight.cc  HybridWeight.h  IncrEnsCtlVec.h  IncrModCtlVec.cc  IncrModCtlVec.h  Increment.cc  Increment.h  Interpolator.h  LocalizationMatrix.h  ModelBias.h  ModelBiasCtlVec.h  ModelBiasIncrement.cc  ModelBiasIncrement.h  ObsSpace.h  ObsVec.h  State.cc  State.h  Tlm.h  Traits.h  Variables.h  instantiateQuenchMatrices.h
saber/src/saber/: .gitignore  CMakeLists.txt  CMakeLists.txt.patch
saber/src/saber/blocks/: SaberBlockChainBase.h  SaberBlockChainBase.h.patch  SaberBlockParametersBase.h  SaberBlockParametersBase.h.patch  SaberCentralBlockBase.cc  SaberCentralBlockBase.h  SaberCentralBlockBase.h.patch  SaberEnsembleBlockChain.h  SaberEnsembleBlockChain.h.patch  SaberOuterBlockBase.cc  SaberOuterBlockBase.h  SaberOuterBlockBase.h.patch  SaberOuterBlockChain.h  SaberOuterBlockChain.h.patch  SaberParametricBlockChain.cc  SaberParametricBlockChain.h  SaberParametricBlockChain.h.patch
saber/src/saber/bump/: BUMPParameters.h  NICAS.cc  NICAS.h  PsiChiToUV.cc  PsiChiToUV.h  StdDev.cc  StdDev.h  VerticalBalance.cc  VerticalBalance.h
saber/src/saber/fastlam/: CMakeLists.txt  FastLAM.cc  FastLAM.cc.tmp  FastLAM.h  FastLAM.h.tmp  LayerBase.cc  LayerBase.h  LayerHalo.cc  LayerHalo.h  LayerRC.cc  LayerRC.h  LayerSpec.cc  LayerSpec.h
saber/src/saber/generic/: DuplicateVariables.cc  DuplicateVariables.h  Ensemble.h  Hybrid.h  ID.cc  ID.h  StdDev.cc  StdDev.h  WriteFields.cc  WriteFields.h
saber/src/saber/interpolation/: CMakeLists.txt  CMakeLists.txt.patch  GaussToCS.cc  GaussToCS.h  GaussToCS.h.patch  Interpolation.cc  Interpolation.h  Interpolation.h.patch  VertProj.cc  VertProj.h
saber/src/saber/oops/: CMakeLists.txt  CMakeLists.txt.patch  ECUtilities.cc  ECUtilities.h  ErrorCovariance.h  Localization.h  (+13 more)
saber/test/: .gitignore  CMakeLists.txt  CMakeLists.txt.patch  ecmwf_compare.sh  ecmwf_yaml_update.py
saber/test/testinput/: dirac_bump_1.yaml  dirac_bump_1.yaml.patch  dirac_bump_2.yaml  dirac_bump_2.yaml.patch  dirac_ens_noloc_4d.yaml  dirac_id_seq4d.yaml  dirac_spectralb.yaml  dirac_sqrtspectralb.yaml  error_covariance_training_bump_nicas_1.yaml  process_perts_from_csdual_states_1.yaml.patch  process_perts_from_gauss_perts_1.yaml.patch  randomization_csdual_sqrtspectralb.yaml.patch  randomization_sqrtspectralb.yaml.patch  randomization_sqrtspectralb_2.yaml
saber/test/testlist/: saber_test_tier1-fastlam.txt  saber_test_tier1-spectralb-vader.txt.patch
saber/test/testref/: dirac_bump_1.ref  dirac_bump_1.ref.patch  dirac_bump_2.ref  dirac_bump_2.ref.patch  dirac_ens_noloc_4d.ref  dirac_id_seq4d.ref  dirac_spectralb_from_L15.ref  dirac_spectralb_gauss_vader_1.ref  randomization_csdual_sqrtspectralb.ref.patch  randomization_sqrtspectralb.ref.patch
saber/test/testref_ecmwf/: dirac_bump_1.ref
saber_patch/: .gitignore  CMakeLists.txt  CPPLINT.cfg  cmake  docs  saber-import.cmake.in  tools
saber_patch/quench/: CMakeLists.txt  data
saber_patch/quench/mains/: quenchErrorCovarianceToolbox.cc
saber_patch/quench/src/: Fields.h  Geometry.cc  Gom.h  IncrModCtlVec.h  Increment.cc  Increment.h  LocalizationMatrix.h  Locations.h  Logbook.h  Model.h  ModelBias.cc  ModelBiasCovariance.h  ModelBiasEstimator.h  State.h
saber_patch/src/: CPPLINT.cfg
saber_patch/src/saber/: .gitignore  CMakeLists.txt  blocks  bump  generic  gsi  spectralb  util  vader
saber_patch/test/: CMakeLists.txt  ecmwf_compare.sh  fctest  testdata  testdeps  testinput  testlist  testref
saber_patch/test/testref_ecmwf/: ecmwf_dirac_bump_2.ref
script/: check_diff.sh  check_diff_recursively.sh  check_status.sh  clear_patch.sh  oops_hash  remove_patch.sh  reset_hash.sh  saber_hash  vader_hash
vader/: CMakeLists.txt  vader-import.cmake.in  vader-import.cmake.in.patch
vader/src/: .gitignore  CMakeLists.txt  CMakeLists.txt.patch
vader/src/mo/: common_varchange.cc  eval_sat_vapour_pressure.cc  functions.cc  functions.h
vader/src/vader/: vader.cc  vader.h
vader/src/vader/recipes/: WaterVaporMixingRatioWrtMoistAirAndCondensedWater2m.h
vader_patch/: .gitignore  CMakeLists.txt  CPPLINT.cfg  cmake  tools  vader-import.cmake.in
vader_patch/src/: CMakeLists.txt  OceanConversions  mo  vader
(+89 files in other folders)
