# (C) Copyright 2023 Meteorologisk Institutt
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.

################################################################################
# ECSABER
################################################################################

add_subdirectory( oops_patch )
add_subdirectory( vader_patch )
add_subdirectory( saber_patch )
